# gdbm-native-rs

./: Cargo.toml  Dockerfile  GDBM-Format.md  LICENSE  Notes.md  README.md  testgen
.github/workflows/: TestingCI.yml
src/: .gitignore  avail.rs  bucket.rs  bytes.rs  dir.rs  error.rs  hashutil.rs  header.rs  import.rs  lib.rs  magic.rs  options.rs  ser.rs  testgen.cc
src/data/: basic.db  basic.db.be32  basic.db.be32.numsync  basic.db.le32  basic.db.le32.numsync  basic.db.le64  basic.db.le64.numsync  basic.json  basic.json.be32  basic.json.be64  basic.json.le32  basic.json.le64  empty.db.be64  empty.db.be64.numsync  empty.db.le32  empty.db.le32.numsync  empty.db.le64  empty.db.le64.numsync  empty.json.be32  empty.json.be64  empty.json.le32  empty.json.le64  gen-data.sh
tests/: cas.rs  compact.rs  convert.rs  exists.rs  export.rs  get.rs  iterate.rs  open.rs  read.rs  update.rs
tests/common/: mod.rs
