[package]
name = "gdbm-native"
version = "0.5.2"
authors = ["Jeff Garzik"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Rust-native implementation of GDBM key/value database"
repository = "https://github.com/jgarzik/gdbm-native-rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "^0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
