[package]
name = "gdbm-native"
version = "0.5.2"
authors = ["Jeff Garzik"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Rust-native implementation of GDBM key/value database"
repository = "https://github.com/jgarzik/gdbm-native-rs.git"

[features]
diagnostic = []

[dependencies]
base64 = "^0.22"
tempfile = "3.13"

[dev-dependencies]
tempfile = "3.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
